--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,12 +14,45 @@ html {
  * Global layout stuff
  */
 
+/*
+h1, h2, h3, h4, h5 {
+  font-family: 'Open Sans', sans-serif;
+}
+*/
+nav {
+  z-index: +1; position: fixed;
+  width: 100%;
+  background-color: #00a087;
+  color: #e8fdff;
+  height: 80px;
+  padding-left: 2em;
+  padding-right: 2em;
+
+}
+
 body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Open Sans', sans-serif;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+main {
+  width: 450px;
+  background-color: #BEF2EB;
+  padding-top: 140px;
+  margin: auto;
+}
+
+#nav-bar .logo {
+  float:left;
+  width: 80px;
+  height: 80px;
+ }
+
+#nav-bar .header {
+  float: left;
+  padding-left: 10px;
+  line-height: 80px;
+  font-size: 2em;
+ }
