--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,13 +33,14 @@ nav {
 body {
   margin: 0;
   color: #244751;
-  background-color: #eee;
-  font-family: 'Open Sans', sans-serif;
+  background-color: #F3F3F3;
+  font-family: 'Roboto', sans-serif;
+;
 }
 
 main {
   width: 450px;
-  background-color: #BEF2EB;
+  background-color: #fff;
   padding-top: 140px;
   margin: auto;
 }
