--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -63,12 +63,20 @@ main {
    .container {
     width: 100%;
   }
-
-  #nav-bar .header {
-    width: 25%;
+  #nav-bar {
+    width: 100%;
   }
-
+  #nav-bar .header {
+    width: 35%;
+    font-size: 1.5em;
+  }
   #nav-bar #nav-text {
-    visibility: hidden;
+    display: none;
+  }
+  #nav-bar button {
+    width: 15%;
+  }
+  #nav-bar img {
+    width: 25%;
   }
 
