--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -1662,12 +1662,12 @@ img.emoji {
   display: inline-block;
   width: 24px;
   height: 29px;
-  background: url("../img/IconsetSmiles.png") no-repeat;
+  background: url("/scripts/lib/img/IconsetSmiles.png") no-repeat;
   background-size: 42px 350px;
   border: 0; }
 
 .is_1x .emoji-menu-tabs .emoji-menu-tab {
-  background-image: url("../img/IconsetSmiles_1x.png"); }
+  background-image: url("/scripts/lib/img/IconsetSmiles_1x.png"); }
 
 .emoji-menu-tabs .icon-recent {
   background-position: -9px -306px; }
